[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/font/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script/menu_script.gd" type="Script" id=2]
[ext_resource path="res://assets/font/dynamicMedium.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="."]
anchor_left = 0.00156078
anchor_right = 0.00156078
margin_top = -1.88776
margin_right = 1920.0
margin_bottom = 1086.11
color = Color( 0.466667, 0.490196, 0.976471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -703.0
margin_top = -352.0
margin_right = 704.0
margin_bottom = 352.0
size_flags_stretch_ratio = 1.22
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1407.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 1 )
text = "Fearful Ghost"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 253.0
margin_right = 1407.0
margin_bottom = 651.0
custom_constants/separation = 10

[node name="start" type="Label" parent="VBoxContainer/VBoxContainer2"]
margin_right = 1407.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 3 )
text = "START"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="VBoxContainer/VBoxContainer2/start"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Label" parent="VBoxContainer/VBoxContainer2"]
margin_top = 102.0
margin_right = 1407.0
margin_bottom = 194.0
custom_fonts/font = ExtResource( 3 )
text = "SETTINGS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_button" type="Button" parent="VBoxContainer/VBoxContainer2/settings"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorial" type="Label" parent="VBoxContainer/VBoxContainer2"]
margin_top = 204.0
margin_right = 1407.0
margin_bottom = 296.0
custom_fonts/font = ExtResource( 3 )
text = "TUTORIAL"
align = 1

[node name="tutorial_button" type="Button" parent="VBoxContainer/VBoxContainer2/tutorial"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.346
anchor_top = 0.228
anchor_right = 0.659
anchor_bottom = 0.837
margin_left = 0.177979
margin_top = -7.976
margin_right = -0.213074
margin_bottom = -0.0039978
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Label" parent="VBoxContainer/VBoxContainer2"]
margin_top = 306.0
margin_right = 1407.0
margin_bottom = 398.0
custom_fonts/font = ExtResource( 3 )
text = "QUIT"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_button" type="Button" parent="VBoxContainer/VBoxContainer2/quit"]
modulate = Color( 0, 0, 0, 0 )
anchor_left = 0.42
anchor_top = 0.141
anchor_right = 0.579
anchor_bottom = 0.924
margin_left = 0.0599976
margin_top = 0.0279999
margin_right = 0.346924
margin_bottom = -0.00800323
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="ColorRect" parent="."]
visible = false
anchor_left = 0.00156078
anchor_right = 0.00156078
margin_left = 6.4373e-06
margin_top = -1.88776
margin_right = 1920.0
margin_bottom = 1086.11
color = Color( 0.466667, 0.490196, 0.976471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialLabel" type="Label" parent="Tutorial"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1829.0
margin_bottom = 970.0
custom_fonts/font = SubResource( 2 )
text = "Run around the labirint as a ghost and take care of the gnomes filling their hearts with fear, if no fear is left in their hearts you lose"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 7.0
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer2/start/start_button" to="." method="_on_start_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/VBoxContainer2/start/start_button" to="." method="_on_start_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/start/start_button" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer2/settings/settings_button" to="." method="_on_settings_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/VBoxContainer2/settings/settings_button" to="." method="_on_settings_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/settings/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer2/tutorial/tutorial_button" to="." method="_on_tutorial_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/VBoxContainer2/tutorial/tutorial_button" to="." method="_on_tutorial_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/tutorial/tutorial_button" to="." method="tutorial"]
[connection signal="mouse_entered" from="VBoxContainer/VBoxContainer2/quit/quit_button" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/VBoxContainer2/quit/quit_button" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/quit/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
